[gd_scene load_steps=13 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/images/background1.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/font_als.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/Button2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/button.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Pause.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.905882, 0.972549, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.513726, 0.466667, 0.466667, 1 )

[sub_resource type="DynamicFont" id=5]
size = 65
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 55
font_data = ExtResource( 3 )

[node name="control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 1254, 304 )
texture = ExtResource( 2 )

[node name="nine_patch_rect" type="NinePatchRect" parent="."]
margin_left = 1346.0
margin_top = 41.0
margin_right = 1867.0
margin_bottom = 278.0
texture = ExtResource( 4 )
patch_margin_left = 77
patch_margin_top = 80
patch_margin_right = 115
patch_margin_bottom = 150

[node name="nine_patch_rect" type="NinePatchRect" parent="nine_patch_rect"]
margin_left = -1258.0
margin_top = -3.0
margin_right = -731.0
margin_bottom = 234.0
texture = ExtResource( 4 )
patch_margin_left = 77
patch_margin_top = 80
patch_margin_right = 115
patch_margin_bottom = 150

[node name="text_health" type="RichTextLabel" parent="."]
margin_left = 1421.0
margin_top = 123.0
margin_right = 1881.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( -531, 247 )
custom_colors/default_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "HP: 0"

[node name="progress_exp" type="ProgressBar" parent="."]
margin_left = 343.0
margin_top = 952.0
margin_right = 1643.0
margin_bottom = 1012.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )

[node name="text_level" type="RichTextLabel" parent="."]
margin_left = 157.0
margin_top = 130.0
margin_right = 566.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( -1374, 116 )
custom_colors/default_color = Color( 0.921569, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "LVL: 0"

[node name="texture_pause" type="TextureRect" parent="."]
margin_left = 849.0
margin_top = 184.0
margin_right = 1149.0
margin_bottom = 484.0
texture = ExtResource( 6 )

[node name="texture_attack" type="TextureButton" parent="."]
margin_left = 678.0
margin_top = 537.0
margin_right = 1078.0
margin_bottom = 737.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )

[node name="text_button_attack" type="RichTextLabel" parent="texture_attack"]
margin_left = 87.3333
margin_top = 70.6667
margin_right = 339.333
margin_bottom = 133.667
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "Атака"

[node name="button_attack" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.00392157 )
margin_left = 719.0
margin_top = 592.0
margin_right = 1226.0
margin_bottom = 779.0

[node name="button_pause" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.00392157 )
margin_left = 868.0
margin_top = 200.0
margin_right = 1130.0
margin_bottom = 475.0

[node name="text_time" type="RichTextLabel" parent="."]
margin_left = 894.0
margin_top = 53.0
margin_right = 1210.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -1374, 116 )
custom_colors/default_color = Color( 0.921569, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "00:00"

[node name="text_time_red" type="RichTextLabel" parent="."]
visible = false
margin_left = 894.0
margin_top = 53.0
margin_right = 1210.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -1374, 116 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "00:00"

[connection signal="pressed" from="button_attack" to="." method="_on_button_attack_pressed"]
[connection signal="pressed" from="button_pause" to="." method="_on_button_pause_pressed"]
